@@ -3,6 +3,7 @@
 # $Header: $
 
 WEBAPP_OPTIONAL="yes"
+
 inherit depend.php eutils perl-module toolchain-funcs webapp
 
 DESCRIPTION="System monitor for obtaining accurate and up to date info on the performance of a number of systems"
@@ -54,8 +55,10 @@ src_unpack() {
 
 src_compile() {
 	MAKE=pmake emake \
+		AR="$(tc-getAR)" \
 		CC="$(tc-getCC)" \
 		CFLAGS+="${CFLAGS}" \
+		RANLIB="$(tc-getRANLIB)" \
 		STRIP=true || die "emake failed."
 }
 
@@ -125,7 +128,7 @@ pkg_postinst() {
 		webapp_pkg_postinst
 	fi
 
-	elog "You'll need to setup /etc/sym{on,ux}.conf before running these "
+	elog "You'll need to setup /etc/sym{on,ux}.conf before running these"
 	elog "daemons for the first time."
 	elog "To create the RRDs run /usr/share/symon/c_smrrds.sh all"
 	elog "To test the configuration run sym{on,ux} -t"
