@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 May 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> symon-2.79.ebuild:
+  Respect AR and RANLIB, while there beautify the ebuild
+
   08 Apr 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> symon-2.79.ebuild:
   Prettify src_compile, virtual/httpd-cgi removed from RDEPEND since it isn't
   needed
